--- a/platformio.ini
+++ b/platformio.ini
@@ -1,3 +1,21 @@
+; Copyright (C) 2019 lokthelok
+;
+; This file is part of CalendarPrinter.
+; 
+; CalendarPrinter is free software: you can redistribute it and/or modify
+; it under the terms of the GNU General Public License as published by
+; the Free Software Foundation, either version 3 of the License, or
+; (at your option) any later version.
+;
+; This program is distributed in the hope that it will be useful,
+; but WITHOUT ANY WARRANTY; without even the implied warranty of
+; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+; GNU General Public License for more details.
+;
+; You should have received a copy of the GNU General Public License
+; along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+
 ; PlatformIO Project Configuration File
 ;
 ;   Build options: build flags, source filter
@@ -13,3 +31,4 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+lib_deps = Adafruit Thermal Printer Library,
